# 104-api-rag_and_llm

./: .gitignore  Home.py  LICENCE  README.md  config-example.ini  engine.py  global_utils.py  ingest.py  main.py  pyproject.toml  test_4_instala_modelo_HF.py
.streamlit/: config.toml
assets/: style.css
pages/: 1_🕵️_RAG_System.py
src/: parser.py
tests/: test_1_parser.py  test_2_query.py  test_3_health.py
utils/: call_llm.py  get_aws_bedrock_client.py  get_azure_openai_client.py  llm_orchestrator.py
vector_db/95ff3a0a-8436-4216-8af9-c21535751dc6/: index_metadata.pickle
