[project]
name = "104-api-rag-and-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "botocore>=1.42.62",
    "fastapi>=0.135.1",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.1",
    "openai>=2.25.0",
    "pandas>=3.0.1",
    "sentence-transformers>=5.2.3",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "uvicorn>=0.41.0",
]
